methods.basics.Methods.scala.error
Compilation error:
Methods:11: error: not found: value poseBicuit
  poseBicuit()
  ^