methods.basics.Methods.scala.code
def goAndGet() {
  var nbPas = 0
  while (!estSurBiscuit()) {
    
    avance()
    nbPas = nbPas + 1
    
  }
  prendBiscuit()
  recule(nbPas)
  poseBicuit()
}

for (i <- 1 to 7) {
    goAndGet();
    droite();
    avance();
    gauche();
}